# corre

./: CHANGELOG.md  Cargo.toml  README.md  TODO.txt  justfile  nacre
.github/workflows/: static.yml
doc/: html.yaml  man.yaml  nacre.1  nacre.html  styles.css
doc/manpage/: corre.1
doc/www/: CHANGELOG.html  README.html
src/: lib.rs  main.rs
tst/: in.html  list.md  main.md  partial.md
