[package]
name = "corre"
version = "1.0.0"
edition = "2021"
authors = ["Mozzie Dvorak <mdvorak.projects@gmail.com>"]
description = "Execute shell scripts embedded within text"
readme = "./README.md"
homepage = "https://mdvorak340.github.io/corre/"
repository = "https://github.com/mdvorak340/corre"
license = "MIT"
keywords = ["shell", "scripts"]
categories = ["command-line-utilities"]
exclude = ["dist/", "justfile", ".github/"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
subprocess = "0.2.9"
